# yaSetupDxe

./: .gitignore  .gitmodules  README.md  YaSetupDxe.inf  YaSetupPkg.dec  YaSetupPkg.dsc  yaSetupDxe.kdev4
Include/: Theme.h
Include/Presenter/: Entry.h
Presenter/: Entry.c  Presenter.inf
Theme/: DefaultTheme.inc.dsc
Theme/Default/: Cursor.c  DefaultTheme.inf
Utilities/: ConvertBinaryFileToC.c
concept-tests/: CMakeLists.txt  Makefile  compositor.c  event.c  main.c  nine-patch.c  window.c
concept-tests/include/: common.h  compositor.h  event.h  main.h  theme.h  window.h
non-UEFI/concept-tests/: CMakeLists.txt  blend.c  font.c  main.c
non-UEFI/concept-tests/include/: blend.h  common.h  font.h  nine-patch.h
non-UEFI/concept-tests/include/freetype/: fttypes.h
non-UEFI/concept-tests/include/freetype/internal/: ftdebug.h
non-UEFI/concept-tests/include/freetype2/: FreeTypeAmalgam.h  Glue.h
non-UEFI/ui-design/: mainwindow.ui
ui-design/: CMakeLists.txt  mainwindow.cpp
